Fixed issue with `tec-events-category-colors__wrap`.

--- a/src/resources/postcss/admin/category-colors/admin-category.pcss
+++ b/src/resources/postcss/admin/category-colors/admin-category.pcss
@@ -21,6 +21,7 @@
 .inline-edit-row {
 	.tec-events-category-colors__wrap {
 		line-height: var(--tec-line-height-normal);
+		padding-right: var(--tec-spacer-2);
 
 		label {
 			line-height: var(--tec-line-height-normal);
@@ -51,7 +52,7 @@
 				"color-picker-3"
 				"preview";
 
-			.form-field {
+			.tec-events-category-colors__field {
 				margin: 0;
 			}
 		}
